Updated portfolio pages, Resume/Portfolio page still WIP

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,17 @@
 :root {
-  --main-bg-color: #9EB3C2;
+  --main-bg-color: white;
 }
 
 body {
-  background-color: #9EB3C2;
+  background-color: var(--main-bg-color);
+}
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content-wrap {
+  flex: 1;
 }
