contact page will now send form data to email

--- a/src/components/Project/project.css
+++ b/src/components/Project/project.css
@@ -1,3 +1,4 @@
 .project-card {
-    background-image: url(../../assets/book_search_engine.png);
+    background-image: url("../../assets/nutriplanner1.png");
+    background-size: cover;
 }
