--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -11,3 +11,10 @@
     position: absolute;
     left: 47rem;
 }
+
+@media only screen and (min-width: 768px) and (max-width: 1280px) {
+    .nav-container {
+        position: absolute;
+        left: 20rem;
+    }
+}
